2013-02-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/usb.c (grub_usb_device_attach): Add missing
	grub_print_error.

2013-02-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/serial/common.c (grub_usbserial_attach): Fix missing
	zero-out of port structure.

2013-01-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/xfs.c (grub_xfs_read_block): Fix computation in presence
	of extended attributes.

2013-01-27  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-install.in: change misleading comment about
	device.map creation

2013-01-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_text.c (grub_menu_init_page): Fix behaviour
	when menu highlight color isn't set.

2013-01-27  C. Masloch  <pushbx@38.de>

	Improve FreeDOS direct loading support compatibility.

	* include/grub/i386/relocator.h (grub_relocator16_state):
	New member ebp.
	* grub-core/lib/i386/relocator.c (grub_relocator16_ebp): New extern
	variable.
	(grub_relocator16_boot): Handle %ebp.
	* grub-core/lib/i386/relocator16.S: Likewise.
	* grub-core/loader/i386/pc/freedos.c:
	Load BPB to pass kernel which partition to load from.
	Check that kernel file is not too large.
	Set register dl to BIOS unit number as well.

2013-01-22  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-reboot.in (usage): Document the need for
	GRUB_DEFAULT=saved.
	* util/grub-set-default.in (usage): Likewise.
	Reported by: Brian Candler.  Fixes Ubuntu bug #1102925.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h: Include sys/types.h rather
	than defining WORDS_BIGENDIAN manually.

2013-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/kernel.h (FOR_MODULES): Adjust to preserve alignment
	invariants.

2013-01-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/font/font.c (blit_comb: do_blit): Make static instead of
	nested.
	(blit_comb: add_device_width): Likewise.
