@@ -1,5 +1,10 @@
 2013-02-01  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/lsacpi.c: Show more info. Hide some boring parts
+	unless they have unexpected values.
+
+2013-02-01  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/bus/usb/usb.c (grub_usb_device_attach): Add missing
 	grub_print_error.
 
